# biobank_olink

./: .gitignore  Dockerfile  README.md  pyproject.toml
biobank_olink/: __main__.py  base.py  cli.py  clustering.py  constants.py  dataset.py  interactions.py  transformer.py  two_extremes_exp.py  utils.py
biobank_olink/commands/: cross_on_prospective.py  cross_sectional.py  cross_sectional_adj.py  interactions.py  pred_diag2.py  pred_diagnosis.py  prospective.py  transformer.py  two_extremes.py
biobank_olink/data/: panels_gene_ontology.csv
biobank_olink/exp_two_extremes/: __init__.py  base.py  constants.py  data.py  experiment_base.py  transformer.py
notebook/: clustering.ipynb  dataset.ipynb  linear_pattern.ipynb  olink_adds_information.ipynb  regression.ipynb  two_edges_of_sbp.ipynb
notebooks/: biomarkers_asi.ipynb  biomarkers_bp.ipynb  biomarkers_bp_change.ipynb  clustering.ipynb  data_asi.ipynb  dataset.ipynb  exp_cross_sectional.ipynb  exp_cross_sectional_adj.ipynb  exp_pred_diagnosis.ipynb  exp_prospective.ipynb  exp_two_extremes.ipynb  feat_imp_elbow_point.ipynb  linear_pattern.ipynb  olink_adds_information.ipynb  pred_diagnosis.ipynb  two_edges_of_sbp.ipynb
scripts/: run_experiment.sh  run_singularity.sh  run_two_extremes_exp.sh  two_extremes_exp.py
