[project]
name = "biobank-olink"
version = "0.0.2"
description = ""
readme = "README.md"
authors = [
    { name = "Arkadiusz Sitek", email = "asitek@mgh.harvard.edu" },
    { name = "Pawel Renc", email = "prenc@mgh.harvard.edu" },
]
dependencies = [
    'importlib-metadata; python_version>="3.10"',
    "pandas",
    "hdbscan",
    "seaborn",
    "scikit-learn",
    "phate",
    "umap-learn",
    "shap",
    "xgboost",
    "optuna",
    "click",
    "torch",
    "torchtuples",
]

[project.optional-dependencies]
all = ["jupyter"]

[project.scripts]
biobank_olink = "biobank_olink.cli:run_cli"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["biobank_olink"]

[tool.setuptools.package-data]
"biobank_olink.data" = ["*"]