[project]
name = "biobank-olink"
version = "0.0.1"
readme = "README.md"
authors = [
    { name = "Arkadiusz Sitek", email = "asitek@mgh.harvard.edu" },
    { name = "Pawel Renc", email = "prenc@mgh.harvard.edu" },
]
dependencies = [
    "pandas",
    "hdbscan",
    "seaborn",
    "scikit-learn",
    "phate",
    "shap",
    "xgboost",
    "optuna",
    "click",
    "kneed",
    "wandb"
]

[project.optional-dependencies]
all = ["jupyter", "openpyxl"]
torch = ["torch", "torchtuples"]


[project.scripts]
biobank_olink = "biobank_olink.cli:run_cli"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["biobank_olink"]

[tool.setuptools.package-data]
"biobank_olink.data" = ["*"]