[project]
name = "biobank-olink"
version = "0.0.1"
readme = "README.md"
authors = [
    { name = "Arkadiusz Sitek", email = "asitek@mgh.harvard.edu" },
    { name = "Pawel Renc", email = "prenc@mgh.harvard.edu" },
]
dependencies = [
    "click",
    "kneed",
    "pandas",
    "scikit-learn",
    "seaborn",
    "shap",
    "wandb",
    "xgboost",
    "polars",
    "pyarrow",
    "openpyxl",
    "jupyter",
    "optuna"
]

[project.optional-dependencies]
cluster = ["hdbscan", "umap-learn", "phate"]
torch = ["torch", "torchtuples"]


[project.scripts]
biobank_olink = "biobank_olink.cli:run_cli"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["biobank_olink"]

[tool.setuptools.package-data]
"biobank_olink.data" = ["*"]